# neorv32-rust

./: .gitmodules  Cargo.toml  README.md  generate_bin.sh  generate_exec.sh
.cargo/: config  flash.sh
debug/: openocd_client.sh  openocd_server.sh
src/: gpio.rs  leds.rs  main.rs  print.rs  timer.rs
